TaskProject/force-app/main/default/objects/Classroom__c/fields/Classroom_Code__c.field-meta.xml
<CustomField>
    <fullName>Classroom_Code__c</fullName>
    <displayFormat>{000}</displayFormat>
    <label>Classroom Code</label>
    <type>AutoNumber</type>
</CustomField>