TaskProject/force-app/main/default/objects/Classroom__c/fields/Standard__c.field-meta.xml
<CustomField>
    <fullName>Standard__c</fullName>
    <label>Standard</label>
    <length>2</length>
    <type>Text</type>
</CustomField>