TaskProject/force-app/main/default/objects/Classroom__c/fields/total_Students__c.field-meta.xml
<CustomField>
    <fullName>total_Students__c</fullName>
    <label>total Students</label>
    <summaryForeignKey>Student__c.Classroom__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>