TaskProject/force-app/main/default/objects/Classroom__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Standard__c</columns>
    <columns>total_Students__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>